--- a/index.html
+++ b/index.html
@@ -222,8 +222,12 @@
         <div>doc24<br>documento ventiquattresimo</div>
         <div>doc25<br>documento venticinquesimo</div>
         <div>doc26<br>documento ventiseiesimo</div>
-        <div>doc27<br>documento ventisettesimo</div>
-    </div>
+        <div>
+            <a href="/privacy" target="_blank" style="color: white; text-decoration: none;">
+                Informativa sulla privacy
+            </a>
+        </div>
+
 
     <script>
         // Funzione per sostituire il carattere in base alla larghezza dello schermo
