--- a/privacy.html
+++ b/privacy.html
@@ -37,10 +37,10 @@
         <h2>Introduzione</h2>
         <p>Questa pagina descrive come raccogliamo, utilizziamo e proteggiamo i dati personali dei visitatori del nostro sito web.</p>
         <h2>Dati Raccolti</h2>
-        <p>Descrivi qui quali dati raccogli, ad esempio:</p>
+        <p>Dati raccoli:</p>
         <ul>
-            <li>Dati di navigazione</li>
-            <li>Dati forniti volontariamente dagli utenti (form, email, ecc.)</li>
+            <li>Dati di navigazione per scopi di monitoraggio delle visite e delle interazioni, attraverso tipologie di dati generali, quali: paese, numero di interazioni e pagine visitate, all'interno del sito.</li>
+            <li>Dati forniti volontariamente dagli utenti attraverso l'unico strumento per ora disponibile su questo sito, cioè l'indirizzo mail. Per tale motivo i dati in questione sono protetti dal provider di posta elettrinica al quale ci affidiamo.</li>
         </ul>
         <h2>Contatti</h2>
         <p>Se hai domande, contattaci all'email <a href="mailto:info@formaeffimera.com">info@formaeffimera.com</a>.</p>
