--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy</title>
+    <title>Privacy Policy - Formaeffimera</title>
     <style>
         @font-face {
             font-family: 'Inter';
@@ -18,8 +18,8 @@
             line-height: 1.5;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
-            color: #333;
+            background-color: #000;
+            color: #fff;
         }
         .container {
             max-width: 100%;
@@ -33,11 +33,13 @@
             font-weight: bold;
             text-transform: uppercase;
             margin: 20px 0 10px;
+            color: #fff;
         }
         p, li {
             font-family: 'Courier Prime', monospace;
             margin: 10px 0;
             word-wrap: break-word;
+            color: #fff;
         }
         ul {
             margin: 10px 0 10px 20px;
