--- a/privacy.html
+++ b/privacy.html
@@ -54,7 +54,7 @@
     <div class="container">
         <h1>Privacy Policy</h1>
 <h2>1. Introduzione</h2>
-<p>Benvenuto su formaeffimera.com. La presente informativa sulla privacy ha lo scopo di fornire informazioni trasparenti e chiare in merito al trattamento dei dati personali raccolti attraverso il nostro sito.</p>
+<p>Benvenut* su formaeffimera.com. La presente informativa sulla privacy ha lo scopo di fornire informazioni trasparenti e chiare in merito al trattamento dei dati personali raccolti attraverso il nostro sito.</p>
 <p>formaeffimera.com è impegnato a rispettare e proteggere la tua privacy, in conformità con le disposizioni del Regolamento Generale sulla Protezione dei Dati (Regolamento UE 2016/679, di seguito &quot;GDPR&quot;) e della normativa italiana applicabile, tra cui la Legge n. 675/96.</p>
 <p>Questa informativa si applica esclusivamente ai dati personali raccolti tramite il nostro sito e gestiti per finalità specifiche descritte nei paragrafi successivi. Ti invitiamo a leggere attentamente i dettagli contenuti in questa pagina per comprendere come trattiamo i tuoi dati e quali diritti puoi esercitare.</p>
 <p></p>
