--- a/index.html
+++ b/index.html
@@ -221,7 +221,12 @@
         <div>doc23<br>documento ventitreesimo</div>
         <div>doc24<br>documento ventiquattresimo</div>
         <div>doc25<br>documento venticinquesimo</div>
-        <div>doc26<br>documento ventiseiesimo</div>
+        <div>
+            <a href="/contacts" target="_blank" style="color: white; text-decoration: none;">
+                Contatti
+            </a>
+        </div>
+
         <div>
             <a href="/privacy" target="_blank" style="color: white; text-decoration: none;">
                 Informativa sulla privacy
