--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacts</title>
+    <title>Contacts - Formaeffimera</title>
     <style>
         @font-face {
             font-family: 'SocialMediaFont';
@@ -31,21 +31,23 @@
         }
         .social-text {
             font-family: 'SocialMediaFont', sans-serif;
-            font-size: 3em;
+            font-size: 2.5em; /* Ridotto rispetto alla versione precedente */
             margin: 10px 0;
         }
         .email {
-            font-family: 'Inter', sans-serif;
-            font-size: 1.5em;
+            font-family: 'SocialMediaFont', sans-serif;
+            font-size: 1.2em; /* Più piccolo ma proporzionato */
             margin: 10px 0;
         }
         .email a {
+            font-family: 'Inter', sans-serif;
+            font-size: 1em; /* Testo del link più piccolo */
             color: #fff;
             text-decoration: none;
         }
         .social-links {
             font-family: 'SocialMediaFont', sans-serif;
-            font-size: 1.5em;
+            font-size: 1.2em; /* Stessa dimensione dell'email */
             margin: 10px 0;
         }
         .social-links a {
