--- a/privacy.html
+++ b/privacy.html
@@ -231,14 +231,14 @@
 <p>2. Data di decorrenza delle modifiche</p>
 <p>Ogni modifica entrerà in vigore dalla data indicata nell'informativa aggiornata. Gli utenti sono invitati a consultare periodicamente questa pagina per verificare eventuali aggiornamenti.</p>
 <p>Versione corrente</p>
-<p>Questa informativa è stata aggiornata l&#x27;ultima volta il 16/11/2024. Eventuali modifiche successive saranno riportate in questa sezione con la rispettiva data di revisione.</p>
+<p>Questa informativa è stata aggiornata l&#x27;ultima volta il 17/11/2024. Eventuali modifiche successive saranno riportate in questa sezione con la rispettiva data di revisione.</p>
 <p>Consenso implicito alle modifiche</p>
 <p>L'utilizzo continuato di formaeffimera.com successivamente all'entrata in vigore delle modifiche comporta l'accettazione delle nuove condizioni.</p>
 <p>Contatti per chiarimenti</p>
 <p>Per domande o richieste di chiarimento sulle modifiche all'informativa sulla privacy, gli utenti possono contattare il titolare del trattamento tramite:</p>
 <ul>
 <li>Email: info@formaeffimera.com</li>
-<li>Pagina dedicata: formaeffimera.com/contatti</li>
+<li>Pagina dedicata: formaeffimera.com/contacts</li>
 </ul>
 <p></p>
 <p></p>
