--- a/privacy.html
+++ b/privacy.html
@@ -62,7 +62,7 @@
 <h2>2. Tipologie di dati personali raccolti</h2>
 <p>formaeffimera.com raccoglie esclusivamente i seguenti dati personali attraverso il sito, in linea con il principio di minimizzazione dei dati (art. 5, par. 1, lett. c del GDPR):</p>
 <ul>
-<li>Dati di contatto: indirizzi e-mail raccolti tramite comunicazioni dirette (ad esempio, email inviate a info@formaeffimera.com).</li>
+<li>Dati di contatto: indirizzi e-mail raccolti tramite comunicazioni dirette (ad esempio, email inviate a privacy@formaeffimera.com).</li>
 <li>Dati tecnici di navigazione: informazioni automaticamente raccolte durante l&#x27;accesso al sito, come indirizzi IP, tipo di browser, sistema operativo, e dettagli relativi alla sessione di navigazione. Questi dati sono raccolti per garantire la sicurezza del sito e per migliorare l'esperienza utente.</li>
 </ul>
 <p>Nessun dato sensibile o relativo a categorie particolari di dati personali (art. 9 GDPR) viene raccolto o trattato.</p>
@@ -73,7 +73,7 @@
 <p>I dati personali raccolti attraverso formaeffimera.com vengono trattati esclusivamente per le seguenti finalità, in conformità con le basi giuridiche definite dal GDPR:</p>
 <p>1. Gestione delle comunicazioni ricevute</p>
 <ul>
-<li>Finalità: Rispondere alle richieste inviate via email all&#x27;indirizzo info@formaeffimera.com, fornendo informazioni o supporto.</li>
+<li>Finalità: Rispondere alle richieste inviate via email all&#x27;indirizzo privacy@formaeffimera.com, fornendo informazioni o supporto.</li>
 <li>Base giuridica: L&#x27;esecuzione di misure precontrattuali su richiesta dell&#x27;interessato (art. 6, par. 1, lett. b GDPR).</li>
 </ul>
 <p>2. Sicurezza e manutenzione del sito</p>
@@ -140,7 +140,7 @@
 <p>8. Diritto di proporre reclamo a un'autorità di controllo</p>
 <p>Puoi presentare un reclamo all'Autorità Garante per la Protezione dei Dati Personali (Garante Privacy) qualora ritieni che il trattamento dei tuoi dati violi la normativa vigente.</p>
 <p>Come esercitare i tuoi diritti</p>
-<p>Per esercitare i tuoi diritti, puoi inviare una richiesta via email a info@formaeffimera.com. La tua richiesta sarà gestita entro il termine previsto dal GDPR (di norma 30 giorni).</p>
+<p>Per esercitare i tuoi diritti, puoi inviare una richiesta via email a privacy@formaeffimera.com. La tua richiesta sarà gestita entro il termine previsto dal GDPR (di norma 30 giorni).</p>
 <p></p>
 <p></p>
 <h2>7. Trasferimento dei dati personali</h2>
@@ -213,7 +213,7 @@
 <p>Hai il diritto di non essere sottoposto a una decisione basata unicamente sul trattamento automatizzato, inclusa la profilazione, che produca effetti giuridici o incida significativamente sulla tua persona.</p>
 <p>8. Come esercitare i diritti</p>
 <p>Per esercitare i tuoi diritti, puoi inviare una richiesta al seguente indirizzo email:</p>
-<p>info@formaeffimera.com</p>
+<p>privacy@formaeffimera.com</p>
 <p>La richiesta sarà gestita senza ritardi ingiustificati e, in ogni caso, entro un mese dalla ricezione, salvo proroghe per casi complessi. Riceverai una risposta chiara e trasparente.</p>
 <p>9. Diritto di reclamo</p>
 <p>Se ritieni che il trattamento dei tuoi dati violi il GDPR, hai il diritto di presentare un reclamo al Garante per la Protezione dei Dati Personali (https://www.garanteprivacy.it/).</p>
@@ -237,7 +237,7 @@
 <p>Contatti per chiarimenti</p>
 <p>Per domande o richieste di chiarimento sulle modifiche all'informativa sulla privacy, gli utenti possono contattare il titolare del trattamento tramite:</p>
 <ul>
-<li>Email: info@formaeffimera.com</li>
+<li>Email: privacy@formaeffimera.com</li>
 <li>Pagina dedicata: formaeffimera.com/contacts</li>
 </ul>
 <p></p>
@@ -267,7 +267,7 @@
 <p>Gli utenti sono invitati a contribuire alla sicurezza dei propri dati:</p>
 <ul>
 <li>Utilizzando password complesse e non condividendole con terzi.</li>
-<li>Contattando tempestivamente info@formaeffimera.com in caso di sospetta compromissione dei propri dati.</li>
+<li>Contattando tempestivamente privacy@formaeffimera.com in caso di sospetta compromissione dei propri dati.</li>
 </ul>
 <p>Limitazioni di responsabilità</p>
 <p>Pur adottando tutte le misure ragionevoli per proteggere i dati personali, formaeffimera.com non può garantire una sicurezza assoluta, in particolare in relazione a vulnerabilità intrinseche delle tecnologie web. Tuttavia, ogni violazione della sicurezza sarà affrontata in conformità alla normativa vigente.</p>
@@ -277,7 +277,7 @@
 <p>Gli utenti di formaeffimera.com hanno il diritto di presentare reclami riguardanti il trattamento dei loro dati personali, in conformità con il GDPR e la normativa italiana applicabile.</p>
 <p>Presentazione di reclami</p>
 <p>1. Contatto diretto con il titolare</p>
-<p>Gli utenti sono incoraggiati a contattare formaeffimera.com per risolvere eventuali problematiche relative alla gestione dei dati personali. È possibile inviare un'email a info@formaeffimera.com con una descrizione dettagliata della questione.</p>
+<p>Gli utenti sono incoraggiati a contattare formaeffimera.com per risolvere eventuali problematiche relative alla gestione dei dati personali. È possibile inviare un'email a privacy@formaeffimera.com con una descrizione dettagliata della questione.</p>
 <p>2. Reclamo al Garante per la Protezione dei Dati Personali</p>
 <p>Se l'utente ritiene che i propri diritti siano stati violati, può presentare un reclamo all'autorità di controllo competente, ovvero il Garante per la Protezione dei Dati Personali in Italia.</p>
 <p>Sito ufficiale: https://www.garanteprivacy.it/</p>
@@ -306,7 +306,7 @@
 <p>Esercizio dei diritti</p>
 <p>Gli utenti possono esercitare i loro diritti inviando una richiesta scritta a:</p>
 <ul>
-<li>Email: info@formaeffimera.com</li>
+<li>Email: privacy@formaeffimera.com</li>
 <li>Oggetto dell'email: &quot;Esercizio dei diritti privacy&quot;</li>
 </ul>
 <p>La richiesta sarà trattata entro 30 giorni, come previsto dalla normativa.</p>
@@ -382,7 +382,7 @@
 <p>7. Diritto di non essere sottoposti a processi decisionali automatizzati (Art. 22 GDPR)</p>
 <p>Gli utenti hanno il diritto di non essere sottoposti a una decisione basata unicamente su trattamenti automatizzati, inclusa la profilazione, che produca effetti giuridici significativi.</p>
 <p>Come esercitare i diritti</p>
-<p>Per esercitare i propri diritti, gli utenti possono contattare il titolare del trattamento dei dati inviando un&#x27;email a: info@formaeffimera.com</p>
+<p>Per esercitare i propri diritti, gli utenti possono contattare il titolare del trattamento dei dati inviando un&#x27;email a: privacy@formaeffimera.com</p>
 <p>Tempi di risposta</p>
 <p>formaeffimera.com si impegna a rispondere alle richieste degli utenti entro 30 giorni dalla ricezione, come previsto dal GDPR. Tale termine può essere prorogato in caso di richieste particolarmente complesse, con notifica all'utente.</p>
 <p>Reclamo al Garante per la Protezione dei Dati Personali</p>
