--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacts - Formaeffimera</title>
+    <title>Contacts</title>
     <style>
         @font-face {
             font-family: 'SocialMediaFont';
@@ -62,6 +62,9 @@
         <div class="social-text">[</div>
         <div class="email">
             e <a href="mailto:info@formaeffimera.com">info@formaeffimera.com</a>
+        </div>
+         <div class="email">
+            e <a href="mailto:privacy@formaeffimera.com">privacy@formaeffimera.com</a>
         </div>
         <div class="social-links">
             <a href="https://www.facebook.com/formaeffimera/" target="_blank">f</a>
