--- a/privacy.html
+++ b/privacy.html
@@ -62,7 +62,7 @@
 <h2>2. Tipologie di dati personali raccolti</h2>
 <p>formaeffimera.com raccoglie esclusivamente i seguenti dati personali attraverso il sito, in linea con il principio di minimizzazione dei dati (art. 5, par. 1, lett. c del GDPR):</p>
 <ul>
-<li>Dati di contatto: indirizzi e-mail raccolti tramite comunicazioni dirette (ad esempio, email inviate a privacy@formaeffimera.com).</li>
+<li>Dati di contatto: indirizzi e-mail raccolti tramite comunicazioni dirette (ad esempio, email inviate a info@formaeffimera.com o privacy@formaeffimera.com).</li>
 <li>Dati tecnici di navigazione: informazioni automaticamente raccolte durante l&#x27;accesso al sito, come indirizzi IP, tipo di browser, sistema operativo, e dettagli relativi alla sessione di navigazione. Questi dati sono raccolti per garantire la sicurezza del sito e per migliorare l'esperienza utente.</li>
 </ul>
 <p>Nessun dato sensibile o relativo a categorie particolari di dati personali (art. 9 GDPR) viene raccolto o trattato.</p>
