--- a/index.html
+++ b/index.html
@@ -222,13 +222,13 @@
         <div>doc24<br>documento ventiquattresimo</div>
         <div>doc25<br>documento venticinquesimo</div>
         <div>
-            <a href="/contacts" target="_blank" style="color: white; text-decoration: none;">
+            <a href="/contacts" style="color: white; text-decoration: none;">
                 Contatti
             </a>
         </div>
 
         <div>
-            <a href="/privacy" target="_blank" style="color: white; text-decoration: none;">
+            <a href="/privacy" style="color: white; text-decoration: none;">
                 Informativa sulla privacy
             </a>
         </div>
