--- a/contacts.html
+++ b/contacts.html
@@ -58,6 +58,11 @@
     </style>
 </head>
 <body>
+
+    <div style="position: fixed; top: 10px; right: 10px; color: white; text-align: center;">
+        <a href="/" style="color: white; text-decoration: none; font-family: 'SocialMediaFont', sans-serif; font-size: 1em;">£</a>
+    </div>
+    
     <div class="container">
         <div class="social-text">[</div>
         <div class="email">
