--- a/privacy.html
+++ b/privacy.html
@@ -13,6 +13,10 @@
             font-family: 'Courier Prime';
             src: url('fonts/CourierPrime-Regular.ttf') format('truetype');
         }
+        @font-face {
+    font-family: 'SocialMediaFont';
+    src: url('fonts/SocialMediaFont.ttf') format('truetype');
+        }
         body {
             font-family: 'Courier Prime', monospace;
             line-height: 1.5;
