--- a/index.html
+++ b/index.html
@@ -166,10 +166,12 @@
 </head>
 <body>
     <!-- Video di sfondo -->
-    <video autoplay muted loop class="background-video">
-        <source src="video/background-video.mp4" type="video/mp4">
-        Il tuo browser non supporta il tag video.
-    </video>
+<!-- Video di sfondo -->
+<video autoplay muted loop class="background-video">
+    <source src="video/background-video.mp4" type="video/mp4" media="(min-width: 769px)">
+    <source src="video/background-video_small.mp4" type="video/mp4" media="(max-width: 768px)">
+    Il tuo browser non supporta il tag video.
+</video>
 
     <!-- Testo principale sopra il video, sotto la griglia -->
     <div class="text-container">
