--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home - English</title>
+</head>
+<body>
+    <h1>Welcome to Formæffimera</h1>
+    <p>This is the English version of the home page.</p>
+</body>
+</html>
 
