--- a/fr/index.html
+++ b/fr/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accueil - Français</title>
+</head>
+<body>
+    <h1>Bienvenue sur Formæffimera</h1>
+    <p>Ceci est la version française de la page d'accueil.</p>
+</body>
+</html>
 
