--- a/fr/index.html
+++ b/fr/index.html
@@ -8,6 +8,11 @@
 <body>
     <h1>Bienvenue sur Formæffimera</h1>
     <p>Ceci est la version française de la page d'accueil.</p>
+        <div style="position: fixed; top: 10px; right: 10px; z-index: 9999; font-size: 12px; color: white; font-family: 'Inter', sans-serif;">
+            <a href="/" id="lang-it" style="margin-right: 10px; text-decoration: none; color: white;">it</a>
+            <a href="/en/" id="lang-en" style="margin-right: 10px; text-decoration: none; color: white;">en</a>
+            <a href="/fr/" id="lang-fr" style="text-decoration: none; color: white;">fr</a>
+        </div>
 </body>
 </html>
 
