--- a/en/index.html
+++ b/en/index.html
@@ -9,9 +9,7 @@
     <h1>Welcome to Formæffimera</h1>
     <p>This is the English version of the home page.</p>
         <div style="position: fixed; top: 10px; right: 10px; z-index: 9999; font-size: 12px; color: white; font-family: 'Inter', sans-serif;">
-            <a href="/" id="lang-it" style="margin-right: 10px; text-decoration: none; color: white;">it</a>
-            <a href="/en/" id="lang-en" style="margin-right: 10px; text-decoration: none; color: white;">en</a>
-            <a href="/fr/" id="lang-fr" style="text-decoration: none; color: white;">fr</a>
+            <a href="/fr/" id="lang-en" style="margin-right: 10px; text-decoration: none; color: white;">en</a>
         </div>
 </body>
 </html>
