--- a/fr/index.html
+++ b/fr/index.html
@@ -167,8 +167,8 @@
 <body>
 
 <video autoplay muted loop class="background-video">
-    <source src="video/background-video.mp4" type="video/mp4" media="(min-width: 769px)">
-    <source src="video/background-video_small.mp4" type="video/mp4" media="(max-width: 768px)">
+    <source src="/video/background-video.mp4" type="video/mp4" media="(min-width: 769px)">
+    <source src="/video/background-video_small.mp4" type="video/mp4" media="(max-width: 768px)">
     Il tuo browser non supporta il tag video.
 </video>
 
