--- a/en/index.html
+++ b/en/index.html
@@ -5,24 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="icon" href="img/icon.png" type="image/png">
-    <link rel="stylesheet" href="cssfonts/fontstyles.css">
+    <link rel="stylesheet" href="/css/style.css">
     <style>
         /* Importa i font */
         @font-face {
             font-family: 'Courier Prime Bold';
-            src: url('fonts/CourierPrime-Bold.ttf') format('truetype');
+            src: url('/fonts/CourierPrime-Bold.ttf') format('truetype');
             font-weight: bold;
             font-style: normal;
         }
+
         @font-face {
             font-family: 'Courier Prime Regular';
-            src: url('fonts/CourierPrime-Regular.ttf') format('truetype');
+            src: url('/fonts/CourierPrime-Regular.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
         }
+
         @font-face {
             font-family: 'SocialMediaFont';
-            src: url('fonts/SocialMediaFont.ttf') format('truetype');
+            src: url('/fonts/SocialMediaFont.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
         }
