--- a/fr/index.html
+++ b/fr/index.html
@@ -254,7 +254,7 @@
         window.addEventListener('resize', updateSocialText);
     </script>
         <div style="position: fixed; top: 10px; right: 10px; z-index: 9999; font-size: 12px; color: white; font-family: 'Inter', sans-serif;">
-            <a href="/" id="lang-fr" style="text-decoration: none; color: white;">fr</a>
+            <a href="/" id="lang-fr" style="margin-right: 10px; text-decoration: none; color: white;">fr</a>
         </div>
 </body>
 </html>
