--- a/en/index.html
+++ b/en/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Home - en</title>
     <link rel="icon" href="img/icon.png" type="image/png">
     <link rel="stylesheet" href="/css/style.css">
     <style>
@@ -200,30 +200,30 @@
         </div>
         
         <!-- Altre celle -->
-        <div>doc02<br>documento secondo</div>
-        <div>doc03<br>documento terzo</div>
-        <div>doc04<br>documento quarto</div>
-        <div>doc05<br>documento quinto</div>
-        <div>doc06<br>documento sesto</div>
-        <div>doc07<br>documento settimo</div>
-        <div>doc08<br>documento ottavo</div>
-        <div>doc09<br>documento nono</div>
-        <div>doc10<br>documento decimo</div>
-        <div>doc11<br>documento undicesimo</div>
-        <div>doc12<br>documento dodicesimo</div>
-        <div>doc13<br>documento tredicesimo</div>
-        <div>doc14<br>documento quattordicesimo</div>
-        <div>doc15<br>documento quindicesimo</div>
-        <div>doc16<br>documento sedicesimo</div>
-        <div>doc17<br>documento diciassettesimo</div>
-        <div>doc18<br>documento diciottesimo</div>
-        <div>doc19<br>documento diciannovesimo</div>
-        <div>doc20<br>documento ventesimo</div>
-        <div>doc21<br>documento ventunesimo</div>
-        <div>doc22<br>documento ventiduesimo</div>
-        <div>doc23<br>documento ventitreesimo</div>
-        <div>doc24<br>documento ventiquattresimo</div>
-        <div>doc25<br>documento venticinquesimo</div>
+        <div>doc02<br>second document</div>
+        <div>doc03<br>third document</div>
+        <div>doc04<br>fourth document</div>
+        <div>doc05<br>fifth document</div>
+        <div>doc06<br>sixth document</div>
+        <div>doc07<br>seventh document</div>
+        <div>doc08<br>eighth document</div>
+        <div>doc09<br>ninth document</div>
+        <div>doc10<br>tenth document</div>
+        <div>doc11<br>eleventh document</div>
+        <div>doc12<br>twelfth document</div>
+        <div>doc13<br>thirteenth document</div>
+        <div>doc14<br>fourteenth document</div>
+        <div>doc15<br>fifteenth document</div>
+        <div>doc16<br>sixteenth document</div>
+        <div>doc17<br>seventeenth document</div>
+        <div>doc18<br>eighteenth document</div>
+        <div>doc19<br>nineteenth document</div>
+        <div>doc20<br>twentieth document</div>
+        <div>doc21<br>twenty-first document</div>
+        <div>doc22<br>twenty-second document</div>
+        <div>doc23<br>twenty-third document</div>
+        <div>doc24<br>twenty-fourth document</div>
+        <div>doc25<br>twenty-fifth document</div>
         <div>
             <a href="/contacts" style="color: white; text-decoration: none;">
                 Contatti
