--- a/fr/index.html
+++ b/fr/index.html
@@ -200,30 +200,30 @@
         </div>
         
         <!-- Altre celle -->
-        <div>doc02<br>documento secondo</div>
-        <div>doc03<br>documento terzo</div>
-        <div>doc04<br>documento quarto</div>
-        <div>doc05<br>documento quinto</div>
-        <div>doc06<br>documento sesto</div>
-        <div>doc07<br>documento settimo</div>
-        <div>doc08<br>documento ottavo</div>
-        <div>doc09<br>documento nono</div>
-        <div>doc10<br>documento decimo</div>
-        <div>doc11<br>documento undicesimo</div>
-        <div>doc12<br>documento dodicesimo</div>
-        <div>doc13<br>documento tredicesimo</div>
-        <div>doc14<br>documento quattordicesimo</div>
-        <div>doc15<br>documento quindicesimo</div>
-        <div>doc16<br>documento sedicesimo</div>
-        <div>doc17<br>documento diciassettesimo</div>
-        <div>doc18<br>documento diciottesimo</div>
-        <div>doc19<br>documento diciannovesimo</div>
-        <div>doc20<br>documento ventesimo</div>
-        <div>doc21<br>documento ventunesimo</div>
-        <div>doc22<br>documento ventiduesimo</div>
-        <div>doc23<br>documento ventitreesimo</div>
-        <div>doc24<br>documento ventiquattresimo</div>
-        <div>doc25<br>documento venticinquesimo</div>
+        <div>doc02<br>document deuxième</div>
+        <div>doc03<br>document troisième</div>
+        <div>doc04<br>document quatrième</div>
+        <div>doc05<br>document cinquième</div>
+        <div>doc06<br>document sixième</div>
+        <div>doc07<br>document septième</div>
+        <div>doc08<br>document huitième</div>
+        <div>doc09<br>document neuvième</div>
+        <div>doc10<br>document dixième</div>
+        <div>doc11<br>document onzième</div>
+        <div>doc12<br>document douzième</div>
+        <div>doc13<br>document treizième</div>
+        <div>doc14<br>document quatorzième</div>
+        <div>doc15<br>document quinzième</div>
+        <div>doc16<br>document seizième</div>
+        <div>doc17<br>document dix-septième</div>
+        <div>doc18<br>document dix-huitième</div>
+        <div>doc19<br>document dix-neuvième</div>
+        <div>doc20<br>document vingtième</div>
+        <div>doc21<br>document vingt et unième</div>
+        <div>doc22<br>document vingt-deuxième</div>
+        <div>doc23<br>document vingt-troisième</div>
+        <div>doc24<br>document vingt-quatrième</div>
+        <div>doc25<br>document vingt-cinquième</div>
         <div>
             <a href="/contacts" style="color: white; text-decoration: none;">
                 Contatti
