--- a/fr/index.html
+++ b/fr/index.html
@@ -226,13 +226,13 @@
         <div>doc25<br>document vingt-cinquième</div>
         <div>
             <a href="/contacts" style="color: white; text-decoration: none;">
-                Contatti
+                Contacts
             </a>
         </div>
 
         <div>
-            <a href="/privacy" style="color: white; text-decoration: none;">
-                Informativa sulla privacy
+            <a href="/fr/protectiondesdonnees" style="color: white; text-decoration: none;">
+                Politique de confidentialité
             </a>
         </div>
 
