--- a/fr/index.html
+++ b/fr/index.html
@@ -225,7 +225,7 @@
         <div>doc24<br>document vingt-quatrième</div>
         <div>doc25<br>document vingt-cinquième</div>
         <div>
-            <a href="/contacts" style="color: white; text-decoration: none;">
+            <a href="/fr/contacts" style="color: white; text-decoration: none;">
                 Contacts
             </a>
         </div>
