--- a/en/index.html
+++ b/en/index.html
@@ -225,7 +225,7 @@
         <div>doc24<br>twenty-fourth document</div>
         <div>doc25<br>twenty-fifth document</div>
         <div>
-            <a href="/contacts" style="color: white; text-decoration: none;">
+            <a href="/en/contacts" style="color: white; text-decoration: none;">
                 Contatti
             </a>
         </div>
