--- a/en/index.html
+++ b/en/index.html
@@ -226,13 +226,13 @@
         <div>doc25<br>twenty-fifth document</div>
         <div>
             <a href="/en/contacts" style="color: white; text-decoration: none;">
-                Contatti
+                Contacts
             </a>
         </div>
 
         <div>
             <a href="/privacy" style="color: white; text-decoration: none;">
-                Informativa sulla privacy
+                Privacy policy
             </a>
         </div>
 
