--- a/en/index.html
+++ b/en/index.html
@@ -231,7 +231,7 @@
         </div>
 
         <div>
-            <a href="/privacy" style="color: white; text-decoration: none;">
+            <a href="/en/privacy" style="color: white; text-decoration: none;">
                 Privacy policy
             </a>
         </div>
