--- a/privacy.html
+++ b/privacy.html
@@ -61,7 +61,7 @@
     </div>
     
     <div class="container">
-        <h1>Privacy Policy</h1>
+        <h1>Informativa sulla privacy</h1>
 <h2>1. Introduzione</h2>
 <p>Benvenut* su formaeffimera.com. La presente informativa sulla privacy ha lo scopo di fornire informazioni trasparenti e chiare in merito al trattamento dei dati personali raccolti attraverso il nostro sito.</p>
 <p>formaeffimera.com è impegnato a rispettare e proteggere la tua privacy, in conformità con le disposizioni del Regolamento Generale sulla Protezione dei Dati (Regolamento UE 2016/679, di seguito &quot;GDPR&quot;) e della normativa italiana applicabile, tra cui la Legge n. 675/96.</p>
