--- a/en/contacts.html
+++ b/en/contacts.html
@@ -7,11 +7,11 @@
     <style>
         @font-face {
             font-family: 'SocialMediaFont';
-            src: url('fonts/SocialMediaFont.ttf') format('truetype');
+            src: url('/fonts/SocialMediaFont.ttf') format('truetype');
         }
         @font-face {
             font-family: 'Inter';
-            src: url('fonts/Inter-VariableFont_opsz,wght.ttf') format('truetype');
+            src: url('/fonts/Inter-VariableFont_opsz,wght.ttf') format('truetype');
         }
         body {
             margin: 0;
