--- a/fr/protectiondesdonnees.html
+++ b/fr/protectiondesdonnees.html
@@ -64,10 +64,11 @@
     
     <div class="container">
         <h1>Politique de confidentialité</h1>
-<h2>1. Introduzione</h2>
-<p>Benvenut* su formaeffimera.com. La presente informativa sulla privacy ha lo scopo di fornire informazioni trasparenti e chiare in merito al trattamento dei dati personali raccolti attraverso il nostro sito.</p>
-<p>formaeffimera.com è impegnato a rispettare e proteggere la tua privacy, in conformità con le disposizioni del Regolamento Generale sulla Protezione dei Dati (Regolamento UE 2016/679, di seguito &quot;GDPR&quot;) e della normativa italiana applicabile, tra cui la Legge n. 675/96.</p>
-<p>Questa informativa si applica esclusivamente ai dati personali raccolti tramite il nostro sito e gestiti per finalità specifiche descritte nei paragrafi successivi. Ti invitiamo a leggere attentamente i dettagli contenuti in questa pagina per comprendere come trattiamo i tuoi dati e quali diritti puoi esercitare.</p>
+<h2>1. Introduction</h2>
+<p>Bienvenue sur formaeffimera.com. La présente politique de confidentialité a pour objet de fournir des informations transparentes et détaillées sur les modalités de traitement des données à caractère personnel collectées via notre site internet.</p>
+<p>formaeffimera.com s’engage à respecter et protéger votre vie privée, conformément aux dispositions du Règlement général sur la protection des données (Règlement UE 2016/679, ci-après « RGPD ») et aux lois nationales applicables, notamment la loi n° 78-17 du 6 janvier 1978 modifiée, dite « Informatique et Libertés ».</p>
+<p>Cette politique s’applique exclusivement aux traitements de données à caractère personnel effectués dans le cadre des activités de notre site et répond aux exigences légales énoncées dans le Code pénal (article 226-13 relatif au secret professionnel) et dans les principes fondamentaux consacrés par le droit européen, tel que mentionné dans le Journal officiel de l’Union européenne (L 119/1 du 4 mai 2016).</p>
+<p>Nous vous invitons à lire attentivement cette page afin de comprendre les finalités, les bases légales et les garanties relatives au traitement de vos données, ainsi que les droits que vous pouvez exercer en tant que personne concernée.<p>
 <p></p>
 <p></p>
 <h2>2. Tipologie di dati personali raccolti</h2>
