--- a/fr/protectiondesdonnees.html
+++ b/fr/protectiondesdonnees.html
@@ -71,14 +71,14 @@
 <p>Nous vous invitons à lire attentivement cette page afin de comprendre les finalités, les bases légales et les garanties relatives au traitement de vos données, ainsi que les droits que vous pouvez exercer en tant que personne concernée.<p>
 <p></p>
 <p></p>
-<h2>2. Tipologie di dati personali raccolti</h2>
-<p>formaeffimera.com raccoglie esclusivamente i seguenti dati personali attraverso il sito, in linea con il principio di minimizzazione dei dati (art. 5, par. 1, lett. c del GDPR):</p>
+<h2>2. Catégories de données personnelles collectées</h2>
+<p>formaeffimera.com collecte uniquement les données personnelles suivantes via son site internet, conformément au principe de minimisation des données prévu à l'article 5, paragraphe 1, point c) du Règlement général sur la protection des données (RGPD) et aux dispositions de la loi n° 78-17 du 6 janvier 1978 modifiée relative à l’informatique, aux fichiers et aux libertés :</p>
 <ul>
-<li>Dati di contatto: indirizzi e-mail raccolti tramite comunicazioni dirette (ad esempio, email inviate a info@formaeffimera.com o privacy@formaeffimera.com).</li>
-<li>Dati tecnici di navigazione: informazioni automaticamente raccolte durante l&#x27;accesso al sito, come indirizzi IP, tipo di browser, sistema operativo, e dettagli relativi alla sessione di navigazione. Questi dati sono raccolti per garantire la sicurezza del sito e per migliorare l'esperienza utente.</li>
+<li>Données de contact : indirizzi e-mail raccolti tramite comunicazioni dirette (ad esempio, email inviate a info@formaeffimera.com o privacy@formaeffimera.com).Les adresses e-mail transmises via des communications directes, telles que les messages envoyés aux adresses info@formaeffimera.com ou privacy@formaeffimera.com.</li>
+<li>Données techniques de navigation: Les informations automatiquement collectées lors de l’accès au site, notamment les adresses IP, le type de navigateur, le système d’exploitation et les détails relatifs à la session de navigation. Ces données sont collectées dans le but d’assurer la sécurité du site et d’améliorer l’expérience utilisateur.</li>
 </ul>
-<p>Nessun dato sensibile o relativo a categorie particolari di dati personali (art. 9 GDPR) viene raccolto o trattato.</p>
-<p>In conformità con l&#x27;art. 11 del GDPR, non vengono raccolti dati che eccedano le finalità dichiarate. Il nostro sito non utilizza moduli di registrazione o raccolta automatizzata di dati personali non esplicitamente forniti dall&#x27;utente.</p>
+<p>Aucun traitement de données sensibles ou de catégories particulières de données personnelles, telles que définies à l’article 9 du RGPD et à l’article 8 de la loi n° 78-17 du 6 janvier 1978, n’est effectué.</p>
+<p>En application de l’article 6 de la loi précitée et de l’article 11 du RGPD, aucune donnée excédant les finalités déclarées n’est collectée. Par ailleurs, notre site ne recourt ni à des formulaires d’inscription, ni à des mécanismes de collecte automatique de données personnelles non expressément fournies par les utilisateurs.</p>
 <p></p>
 <p></p>
 <h2>3. Finalità e basi giuridiche del trattamento</h2>
