--- a/fr/protectiondesdonnees.html
+++ b/fr/protectiondesdonnees.html
@@ -74,7 +74,7 @@
 <h2>2. Catégories de données personnelles collectées</h2>
 <p>formaeffimera.com collecte uniquement les données personnelles suivantes via son site internet, conformément au principe de minimisation des données prévu à l'article 5, paragraphe 1, point c) du Règlement général sur la protection des données (RGPD) et aux dispositions de la loi n° 78-17 du 6 janvier 1978 modifiée relative à l’informatique, aux fichiers et aux libertés :</p>
 <ul>
-<li>Données de contact : indirizzi e-mail raccolti tramite comunicazioni dirette (ad esempio, email inviate a info@formaeffimera.com o privacy@formaeffimera.com).Les adresses e-mail transmises via des communications directes, telles que les messages envoyés aux adresses info@formaeffimera.com ou privacy@formaeffimera.com.</li>
+<li>Données de contact : Les adresses e-mail transmises via des communications directes, telles que les messages envoyés aux adresses info@formaeffimera.com ou privacy@formaeffimera.com.</li>
 <li>Données techniques de navigation: Les informations automatiquement collectées lors de l’accès au site, notamment les adresses IP, le type de navigateur, le système d’exploitation et les détails relatifs à la session de navigation. Ces données sont collectées dans le but d’assurer la sécurité du site et d’améliorer l’expérience utilisateur.</li>
 </ul>
 <p>Aucun traitement de données sensibles ou de catégories particulières de données personnelles, telles que définies à l’article 9 du RGPD et à l’article 8 de la loi n° 78-17 du 6 janvier 1978, n’est effectué.</p>
